# melts

./: .gitignore  Cargo.toml  RUST SQLITE SQLCIPHER ANDROIDl.md
Android/: build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/java/com/example/simple_counter/: Core.kt  MainActivity.kt
Android/shared/: build.gradle  build.gradle.kts
shared/: Cargo.toml
shared/src/: app.rs  database.rs  lib.rs  shared.udl
