[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[dependencies]
uniffi = "0.28.0"
libsql = { version = "0.4", features = ["encryption"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
